--- a/src/Kooco.Pikachu.Blazor/Pages/Components/MemberTagComponent.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/Components/MemberTagComponent.razor
@@ -10,17 +10,21 @@
     [Parameter]
     public bool Margin { get; set; }
 
+    [Parameter]
+    public bool IsSystemAssigned { get; set; } = true;
+
     private string _badgeColor
     {
         get
         {
-            var color = Tag switch
-            {
-                MemberConsts.MemberTags.New => "primary",
-                MemberConsts.MemberTags.Existing => "warning",
-                MemberConsts.MemberTags.Blacklisted => "danger",
-                _ => "success"
-            };
+            var color = !IsSystemAssigned ? "purple"
+                : Tag switch
+                {
+                    MemberConsts.MemberTags.New => "primary",
+                    MemberConsts.MemberTags.Existing => "warning",
+                    MemberConsts.MemberTags.Blacklisted => "danger",
+                    _ => "success"
+                };
 
             return $"pk-badge-{color}";
         }
