Commit For Pk-1210

--- a/src/Kooco.Pikachu.Blazor/Pages/MainMenu/MyMainMenuItem.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/MainMenu/MyMainMenuItem.razor
@@ -23,11 +23,13 @@
 	}
 	else if (MenuItem.MenuItem.Url.TrimStart('~') == currentUri.PathAndQuery)
 	{
-		<a class="lpx-menu-item-link lpx-menu-item my-2 @(MenuItem.IsActive ? "selected" : "") @cssClass"
-			id="@MenuItem.MenuItem.ElementId">
+		<a href="@url" target="@MenuItem.MenuItem.Target"
+		   class="lpx-menu-item-link lpx-menu-item my-2 @(MenuItem.IsActive ? "selected" : "") @cssClass"
+		   id="@MenuItem.MenuItem.ElementId">
 			<span class="lpx-menu-item-icon"><i class="lpx-icon @(MenuItem.MenuItem.Icon ?? "")" aria-hidden="true"></i></span>
 
-			<span class="lpx-menu-item-text hidden-in-hover-trigger">@MenuItem.MenuItem.DisplayName
+			<span class="lpx-menu-item-text hidden-in-hover-trigger">
+				@MenuItem.MenuItem.DisplayName
 				@if (MenuItem.MenuItem.CustomData.TryGetValue("data-notification-count", out var count) && count != null &&
 						count.ToString() != "0")
 				{
