--- a/src/Kooco.Pikachu.Blazor/wwwroot/blazor-global-styles.css
+++ b/src/Kooco.Pikachu.Blazor/wwwroot/blazor-global-styles.css
@@ -314,7 +314,7 @@
 .pk-card {
     padding: 40px 20px;
     border-radius: 20px;
-    color: #000;
+    color: #1f1f1f;
 }
 
     .pk-card > .pk-card-inner {
@@ -329,6 +329,23 @@
             height: 50px;
             width: auto;
         }
+
+        .pk-card > .pk-card-inner i {
+            font-size: 30px;
+            margin-right: 5px;
+        }
+
+    .pk-card.success i {
+        color: #55C95E;
+    }
+
+    .pk-card.warning i {
+        color: #FF9349;
+    }
+
+    .pk-card.danger i {
+        color: #F15A34;
+    }
 
 .rounded-cards .card {
     border-radius: 20px;
