--- a/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/CreateGroupBuy.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/CreateGroupBuy.razor
@@ -2214,6 +2214,39 @@
         </ModalFooter>
     </ModalContent>
 </Modal>
+<Modal @ref="OrderInstructionCropperModal">
+    <ModalContent Size="ModalSize.Large">
+        <ModalHeader>
+            <ModalTitle>@L["OrderInstructionCropper"]</ModalTitle>
+            <CloseButton Clicked="@CloseOrderInstructionCropModal" />
+        </ModalHeader>
+        <ModalBody>
+            <Row>
+                <Column ColumnSize="ColumnSize.Is6">
+                    <Cropper @ref="OrderInstructionCropper"
+                             Source="@imageToCrop"
+                             Style="aspect-ratio: 16 / 9;"
+                             SelectionChanged="@OnOrderInstructionSelectionChanged"
+                             ShowBackground="true" />
+                </Column>
+                <Column ColumnSize="ColumnSize.Is6">
+                    <Div Margin="Margin.Is2.FromBottom">
+                        <Button Color="Color.Primary" Clicked="GetOrderInstructionCroppedImage" Disabled="@cropButtonDisabled">Get Cropped Image</Button>
+                        <Button Color="Color.Secondary" Clicked="@ResetOrderInstructionSelection" Disabled="@cropButtonDisabled">Reset Selection</Button>
+                    </Div>
+                    <Image Source="@croppedImage" Border="Border.Is1" Style="width: 300px; height: 300px;" />
+
+                </Column>
+            </Row>
+
+        </ModalBody>
+        <ModalFooter>
+
+            <Button Color="Color.Secondary" Clicked="@CloseOrderInstructionCropModal">@L["Cancel"]</Button>
+            <Button Color="Color.Primary" Disabled="@croppedImage.IsNullOrWhiteSpace()" Clicked="()=>CropOrderInstructionImageAsync(GroupOrderInstructionModule,OrderInstructionPicker)">@L["Save"]</Button>
+        </ModalFooter>
+    </ModalContent>
+</Modal>
 @code {
 
 }
