#PK-1349 Item badge modification

--- a/src/Kooco.Pikachu.Blazor/Pages/SetItem/EditSetItem.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/SetItem/EditSetItem.razor
@@ -80,7 +80,7 @@
                 <fieldLabel>@L["ItemBadge"]</fieldLabel>
             </div>
             <div class="col-10">
-                <AntDesign.Select TItem="string"
+                @* <AntDesign.Select TItem="string"
                                   TItemValue="string"
                                   DataSource="@ItemBadgeList"
                                   @bind-Value="@CreateUpdateSetItemDto.SetItemBadge"
@@ -101,7 +101,7 @@
                             </div>
                         </div>
                     </DropdownRender>
-                </AntDesign.Select>
+                </AntDesign.Select> *@
             </div>
         </div>
         <div class="row mt-2">
