--- a/src/Kooco.Pikachu.Blazor/Pages/ItemManagement/CreateItem.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/ItemManagement/CreateItem.razor
@@ -38,7 +38,7 @@
 <LoadingIndicator @ref="Loading" FullScreen></LoadingIndicator>
 
 <div>
-     <Heading Size="HeadingSize.Is3" @onclick="NavigateToItemList" style="cursor: pointer;">@L["NewItem"]</Heading>
+    <Heading Size="HeadingSize.Is3" @onclick="NavigateToItemList" style="cursor: pointer;">@L["NewItem"]</Heading>
 </div>
 <Card>
     <CardBody>
@@ -113,20 +113,41 @@
                     <fieldLabel>@L["ItemBadge"]</fieldLabel>
                 </div>
                 <div class="col-10">
-                    <AntDesign.Select TItem="string"
-                                      TItemValue="string"
+                    <AntDesign.Select TItem="ItemBadgeDto"
+                                      TItemValue="ItemBadgeDto"
+                                      ItemLabel="p => p.ItemBadge"
                                       DataSource="@ItemBadgeList"
-                                      @bind-Value="@CreateItemDto.ItemBadge"
+                                      @bind-Value="@CreateItemDto.ItemBadgeDto"
+                                      @bind-Open="SelectOpen"
                                       Size="AntDesign.InputSize.Large"
                                       EnableSearch
                                       AllowClear>
+                        <LabelTemplate>
+                            <AntDesign.Select.LabelTemplateItem Context="item"
+                                                                TItem="ItemBadgeDto"
+                                                                TItemValue="ItemBadgeDto"
+                                                                RemoveIconStyle="margin-top: 1px; display: inline-block;">
+                                <LabelTemplateItemContent>
+                                    <span class="dropdown-badge" style="color: @ItemConsts.GetContrastingTextColor(context.ItemBadgeColor); background-color: @context.ItemBadgeColor">@item.ItemBadge</span>
+                                </LabelTemplateItemContent>
+                            </AntDesign.Select.LabelTemplateItem>
+                        </LabelTemplate>
+                        <ItemTemplate>
+                            <div class="d-flex justify-content-between align-items-center px-1">
+                                <span class="dropdown-badge" style="color: @ItemConsts.GetContrastingTextColor(context.ItemBadgeColor); background-color: @context.ItemBadgeColor">@context.ItemBadge</span>
+                                <button class="dropdown-btn" @onclick="() => DeleteItemBadge(context)">
+                                    <i class="fas fa-times"></i>
+                                </button>
+                            </div>
+                        </ItemTemplate>
                         <DropdownRender Context="originNode">
                             <div>
                                 @originNode
                                 <Divider Style="margin: 4px 0"></Divider>
                                 <div class="d-flex flex-nowrap py-2 px-1 gap-1">
-                                    <AntDesign.Input @bind-Value="@NewItemBadge" Placeholder="@L["EnterANewBadge"]"
+                                    <AntDesign.Input @bind-Value="@NewItemBadge.ItemBadge" Placeholder="@L["EnterANewBadge"]"
                                                      MaxLength="MaxBadgeTextCount" />
+                                    <ColorEdit @bind-Color="@NewItemBadge.ItemBadgeColor" Class="dropdown-picker" />
                                     <PikachuButton Class="pk-btn-sm pk-btn-primary text-nowrap" Clicked="AddItem">
                                         <Icon Name="@IconName.Add" />
                                         @L["AddItem"]
@@ -246,7 +267,7 @@
                     }
                 </div>
             </div>
-            @if (Attributes.Count==0|| (Attributes[0].ItemTags.Count>0 && Attributes.Count < 3))
+            @if (Attributes.Count == 0 || (Attributes[0].ItemTags.Count > 0 && Attributes.Count < 3))
             {
                 <div class="row">
                     <div class="col-2"></div>
@@ -284,7 +305,7 @@
                                             @L["CopyToAll"]
                                         </Span>
                                     </TableHeaderCell>
-                                  @*   <TableHeaderCell Class="text-center">
+                                    @*   <TableHeaderCell Class="text-center">
                                         @L["GroupBuyPrice"]
                                         <Span Class="d-block pt-1 text-primary cursor-pointer"
                                               @onclick="() => CopyToAll(nameof(CreateItemDetailsDto.GroupBuyPrice))">
@@ -363,7 +384,7 @@
                                         <TableRowCell>
                                             <NumericEdit Class="form-control form-control-sm" Style="min-width: 100px;" @bind-Value="@item.SellingPrice"></NumericEdit>
                                         </TableRowCell>
-                                       @*  <TableRowCell>
+                                        @*  <TableRowCell>
                                             <NumericEdit Class="form-control form-control-sm" Style="min-width: 100px;" @bind-Value="@item.GroupBuyPrice"></NumericEdit>
                                         </TableRowCell> *@
                                         <TableRowCell>
@@ -566,7 +587,7 @@
                             <label class="pt-2">@L["ShareProfit"] %</label>
                         </div>
                         <div class="col-4">
-                            <InputNumber class="form-control"  TValue="float" @bind-Value="@CreateItemDto.ShareProfit" max="100" />
+                            <InputNumber class="form-control" TValue="float" @bind-Value="@CreateItemDto.ShareProfit" max="100" />
                         </div>
                     </div>
                     <div class="row">
