--- a/src/Kooco.Pikachu.Blazor/Pages/SetItem/CreateSetItem.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/SetItem/CreateSetItem.razor
@@ -76,7 +76,7 @@
                 <fieldLabel>@L["ItemBadge"]</fieldLabel>
             </div>
             <div class="col-10">
-                <AntDesign.Select TItem="string"
+                @* <AntDesign.Select TItem="string"
                                   TItemValue="string"
                                   DataSource="@ItemBadgeList"
                                   @bind-Value="@CreateUpdateSetItemDto.SetItemBadge"
@@ -97,7 +97,7 @@
                             </div>
                         </div>
                     </DropdownRender>
-                </AntDesign.Select>
+                </AntDesign.Select> *@
             </div>
         </div>
         <div class="row mt-2">
