--- a/src/Kooco.Pikachu.Blazor/Pages/ItemManagement/InventoryReport.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/ItemManagement/InventoryReport.razor
@@ -46,7 +46,7 @@
 <div style="@($"display: {(Loading ? "none" : "block")};" )">
 <div class="row">
     <div class="col-6">
-        <h3>@L["庫存報表"]</h3>
+        <h3>@L["Inventory Report"]</h3>
     </div>
     <div class="col-6 text-lg-end">
         <div class="d-inline-block me-1">
