--- a/src/Kooco.Pikachu.Blazor/Pages/ProductCategories/EditProductCategory.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/ProductCategories/EditProductCategory.razor
@@ -71,7 +71,7 @@
                         </Validation>
                         <Field>
                             <FieldLabel>@L["Description"]</FieldLabel>
-                            <BlazoredTextEditor @ref="@DescriptionHtml">
+                            <BlazoredTextEditor @ref="@DescriptionHtml" Placeholder="@L["Composeanepic"]">
                                 <ToolbarContent>
                                     <select class="ql-header">
                                         <option selected=""></option>
@@ -169,7 +169,7 @@
                                       TextField="@(( item ) => item.Name)"
                                       ValueField="@(( item ) => item.Id)"
                                       @bind-SelectedText="SelectedAutoCompleteText"
-                                      Placeholder="Search..."
+                                      Placeholder="@L["Search..."]"
                                       Filter="AutocompleteFilter.StartsWith"
                                       CustomFilter="@(( item, searchValue ) => item.Name.IndexOf( searchValue, 0, StringComparison.CurrentCultureIgnoreCase ) >= 0 )"
                                       HighlightSearch
