--- a/src/Kooco.Pikachu.Blazor/Pages/ProductCategories/CreateProductCategory.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/ProductCategories/CreateProductCategory.razor
@@ -49,7 +49,7 @@
                         </Validation>
                         <Field>
                             <FieldLabel>@L["Description"]</FieldLabel>
-                            <BlazoredTextEditor @ref="@DescriptionHtml">
+                            <BlazoredTextEditor @ref="@DescriptionHtml" Placeholder="@L["Composeanepic"]">
                                 <ToolbarContent>
                                     <select class="ql-header">
                                         <option selected=""></option>
@@ -145,7 +145,7 @@
                                       TextField="@(( item ) => item.Name)"
                                       ValueField="@(( item ) => item.Id)"
                                       @bind-SelectedText="SelectedAutoCompleteText"
-                                      Placeholder="Search..."
+                                      Placeholder="@L["Search..."]"
                                       Filter="AutocompleteFilter.StartsWith"
                                       CustomFilter="@(( item, searchValue ) => item.Name.IndexOf( searchValue, 0, StringComparison.CurrentCultureIgnoreCase ) >= 0 )"
                                       HighlightSearch
