--- a/src/Kooco.Pikachu.Blazor/Pages/ItemManagement/EditItem.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/ItemManagement/EditItem.razor
@@ -149,7 +149,7 @@
                                 <ColorEdit @bind-Color="@NewItemBadge.ItemBadgeColor" Class="dropdown-picker" />
                                 <PikachuButton Class="pk-btn-sm pk-btn-primary text-nowrap" Clicked="AddItem">
                                     <Icon Name="@IconName.Add" />
-                                    @L["AddItem"]
+                                    @L["AddBadge"]
                                 </PikachuButton>
                             </div>
                         </div>
